change site title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Sprint HTML5 Theme</title>
+<title>Coderana.</title>
 <meta name="keywords" content="HTML5,CSS3,HTML,Template,Multi-Purpose,M_Adnan,Corporate Theme,Sprint HTML5,Sprint HTML5 - Multi Purpose HTML5 Template">
 <meta name="description" content="Sprint HTML5 Template">
 <meta name="author" content="M_Adnan">
