changed field names

--- a/index.html
+++ b/index.html
@@ -303,12 +303,12 @@
                   </li>
                   <li class="col-sm-6">
                     <label>
-                      <input type="text" class="form-control" name="company" id="company" placeholder="PHONE">
+                      <input type="text" class="form-control" name="phone" id="phone" placeholder="PHONE">
                     </label>
                   </li>
                   <li class="col-sm-6">
                     <label>
-                      <input type="text" class="form-control" name="website" id="website" placeholder="SUBJECT">  
+                      <input type="text" class="form-control" name="subject" id="subject" placeholder="SUBJECT">  
                     </label>
                   </li>
                 </ul>
